Fixes z-index of icons

--- a/themes/partage-ton-pain/assets/sass/pages/_home.scss
+++ b/themes/partage-ton-pain/assets/sass/pages/_home.scss
@@ -86,6 +86,7 @@
                     padding: 5px;
                     text-align: center;
                     width: 60px;
+                    z-index: 1;
                 }
                 .header {
                     display: flex;
